src/objects/loan__Other_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>loan__ACH_End_Date__c</fullName>
        <label>ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Frequency__c</fullName>
        <label>ACH Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Next_Debit_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>ACH Next Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Second_Debit_Date__c</fullName>
        <label>ACH Second Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Start_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>ACH Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Additional_Interest_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Interest Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Other Loan Transactions</relationshipLabel>
        <relationshipName>Other_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Billing_Method__c</fullName>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Declining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>loan__Charge__c</referenceTo>
        <relationshipLabel>Waive/Unwaive Transactions</relationshipLabel>
        <relationshipName>Other_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Date__c</fullName>
        <label>Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Credit_Limit__c</fullName>
        <label>Old Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Description__c</fullName>
        <inlineHelpText>Description</inlineHelpText>
        <label>Transaction Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Period_End_Date__c</fullName>
        <label>Draw Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Date__c</fullName>
        <description>Due Date of transaction, this is useful for billing transactions</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Ids__c</fullName>
        <inlineHelpText>This field contains comma separated id of dues which will be restored when this transaction is reversed.</inlineHelpText>
        <label>Due Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Extend_Maturity_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend Maturity Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
        <label>Frequency of Loan Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Only_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Other Loan Transactions</relationshipLabel>
        <relationshipName>Other_Loan_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Amount__c</fullName>
        <inlineHelpText>Loan Amount before the transaction was posted.</inlineHelpText>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Snapshot__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Loan Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__New_Credit_Limit__c</fullName>
        <label>New Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__New_Due_Day__c</fullName>
        <label>New Due Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__New_Index_Rate__c</fullName>
        <label>New Index Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__New_Interest_Rate__c</fullName>
        <label>New Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Next_Due_Date__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Due_Generation_Date__c</fullName>
        <label>Next Due Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Number__c</fullName>
        <description>ACH account number</description>
        <inlineHelpText>ACH account number</inlineHelpText>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Type__c</fullName>
        <description>ACH Account type: Saving or checking</description>
        <label>ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Bank_Name__c</fullName>
        <description>ACH Bank Name</description>
        <inlineHelpText>ACH Drawer Zip</inlineHelpText>
        <label>ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Debit_Date__c</fullName>
        <label>ACH Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address1__c</fullName>
        <description>ACH Drawer Address Line 1</description>
        <inlineHelpText>ACH Drawer Address Line 1</inlineHelpText>
        <label>ACH Drawer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address2__c</fullName>
        <description>ACH Drawer Address Line 2</description>
        <inlineHelpText>ACH Drawer Address Line 2</inlineHelpText>
        <label>ACH Drawer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_City__c</fullName>
        <description>ACH Drawer City</description>
        <inlineHelpText>ACH Drawer City</inlineHelpText>
        <label>ACH Drawer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Name__c</fullName>
        <description>ACH Drawer Name</description>
        <inlineHelpText>ACH Drawer Name</inlineHelpText>
        <label>ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_State__c</fullName>
        <description>One time ACH Drawer State</description>
        <inlineHelpText>One time ACH Drawer State</inlineHelpText>
        <label>ACH Drawer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Zip__c</fullName>
        <description>One time ACH Drawer Zip</description>
        <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
        <label>ACH Drawer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One time ACH fee amount</description>
        <inlineHelpText>One time ACH fee amount</inlineHelpText>
        <label>ACH Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One time ACH payment amount</description>
        <inlineHelpText>One time ACH payment amount</inlineHelpText>
        <label>ACH Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Relationship_Type__c</fullName>
        <description>One time ACH relationship type</description>
        <label>ACH Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2 Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Routing_Number__c</fullName>
        <description>One time ACH Routing number</description>
        <inlineHelpText>One time ACH Routing number</inlineHelpText>
        <label>ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_Amount_to_Current__c</fullName>
        <description>Total Delinquent Amount.</description>
        <label>Amount to Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_Maturity_Date__c</fullName>
        <description>Maturity Date</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Old_Due_Day__c</fullName>
        <label>Old Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Old_Index_Rate__c</fullName>
        <label>Old Index Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Old_Payment_Amount__c</fullName>
        <description>Payment amount before this transaction.</description>
        <inlineHelpText>Payment amount before this transaction</inlineHelpText>
        <label>Old Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Parent_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>loan__Other_Transaction__c</referenceTo>
        <relationshipLabel>Other Loan Transactions</relationshipLabel>
        <relationshipName>Other_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Passed_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of installments passed</description>
        <label>Passed Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pay_Off_Date__c</fullName>
        <description>Date for the pay off quote</description>
        <label>Pay Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Auto_Compute_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Auto Compute Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Tolerance_End_Date__c</fullName>
        <description>End date for the payment tolerance</description>
        <inlineHelpText>End date for the payment tolerance</inlineHelpText>
        <label>Payment Tolerance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Tolerance_Rate__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>Please enter the % in whole numbers only, for example for 80 percent tolerance enter 80.</inlineHelpText>
        <label>Payment Tolerance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Tolerance_Start_Date__c</fullName>
        <description>Start date to apply the payment tolerance</description>
        <inlineHelpText>Start date to apply the payment tolerance</inlineHelpText>
        <label>Payment Tolerance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Primary_Repayment_Schedule_Summary_Ids__c</fullName>
        <inlineHelpText>Field stores primary repayment schedule summary record Ids in comma separated format. This field is used to Reverse Payment Change Action.</inlineHelpText>
        <label>Primary Repayment Schedule Summary Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Extension_Days__c</fullName>
        <description>Days by which repayments are extended</description>
        <inlineHelpText>Days by which repayments are extended</inlineHelpText>
        <label>Number of Payment Deferrals</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Repayment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Same_monthly_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Same Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Total_Fees_Due__c</fullName>
        <label>Total Fees Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Interest_Due__c</fullName>
        <label>Total Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Time__c</fullName>
        <label>Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PrincipalAdjustment-Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Tolerance Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayOff Quote Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Waive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Day Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Limit Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Index Rate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delinquent Pmt Plan Reversal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Waived_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waived Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Other Loan Transaction</label>
    <nameField>
        <displayFormat>OLTID-{0000000000}</displayFormat>
        <label>Other Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Loan Transactions</pluralLabel>
    <recordTypes>
        <fullName>loan__Additional_Repayment_Record_Type</fullName>
        <active>true</active>
        <label>Additional Repayment  Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Billing_Record_Type</fullName>
        <active>true</active>
        <label>Billing Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Charge_Waive_Unwaive_Record_Type</fullName>
        <active>true</active>
        <label>Charge Waive-Unwaive Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Credit_Limit_Change_Record_Type</fullName>
        <active>true</active>
        <label>Credit Limit Change Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Delinquent_Pmt_Plan_Record_Type</fullName>
        <active>true</active>
        <label>Delinquent Pmt Plan Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Delinquent_Pmt_Plan_Reversal_Record_Type</fullName>
        <active>true</active>
        <label>Delinquent Pmt Plan Reversal Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Due_Day_Change_Record_Type</fullName>
        <active>true</active>
        <label>Due Day Change Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Extension_Record_Type</fullName>
        <active>true</active>
        <label>Extension Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Index_Rate_Change_Record_Type</fullName>
        <active>true</active>
        <label>Index Rate Change Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Interest_Waived_Record_Type</fullName>
        <active>true</active>
        <label>Interest Waived Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Loan_Amount_Adjustment_Record_Type</fullName>
        <active>true</active>
        <label>Loan Amount Adjustment Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Loan_Maintenance_Record_Type</fullName>
        <active>true</active>
        <label>Loan Maintenance Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__One_Time_ACH_Record_Type</fullName>
        <active>true</active>
        <label>One Time ACH Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__PayOff_Quote_Generation_Record_Type</fullName>
        <active>true</active>
        <label>PayOff Quote Generation Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Payment_Change_Record_Type</fullName>
        <active>true</active>
        <label>Payment Change Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Payment_Change_Reversal_Record_Type</fullName>
        <active>true</active>
        <label>Payment Change Reversal Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Payment_Tolerance_Change</fullName>
        <active>true</active>
        <label>Payment Tolerance Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__PrincipalAdjustment_Add_Record_Type</fullName>
        <active>true</active>
        <label>PrincipalAdjustment-Add Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__PrincipalAdjustment_Add_Reversal_Record_Type</fullName>
        <active>true</active>
        <label>PrincipalAdjustment-Add Reversal Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Rate_Change_Record_Type</fullName>
        <active>true</active>
        <label>Rate Change Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Rate_Change_Reversal_Record_Type</fullName>
        <active>true</active>
        <label>Rate Change Reversal Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Recurring_Record_Type</fullName>
        <active>true</active>
        <label>Recurring Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Refund_Record_Type</fullName>
        <active>true</active>
        <label>Refund Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Refund_Reversal_Record_Type</fullName>
        <active>true</active>
        <label>Refund Reversal Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Reschedule_Record_Type</fullName>
        <active>true</active>
        <label>Reschedule Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Start_Accrual_Record_Type</fullName>
        <active>true</active>
        <label>Start Accrual Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Stop_Accrual_Record_Type</fullName>
        <active>true</active>
        <label>Stop Accrual Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Write_Off_Record_Type</fullName>
        <active>true</active>
        <label>Write Off Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__ACH_Account_Number_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(loan__OT_ACH_Account_Number__c)) &amp;&amp; NOT(ISNUMBER( loan__OT_ACH_Account_Number__c ))</errorConditionFormula>
        <errorMessage>Account number should be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__ACH_Fee_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( loan__OT_ACH_Fee_Amount__c )) &amp;&amp; (loan__OT_ACH_Fee_Amount__c &lt; 0) &amp;&amp;  ISPICKVAL(loan__Transaction_Type__c  , &apos;One Time ACH&apos;)</errorConditionFormula>
        <errorMessage>Fee amount cannot be zero or negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__ACH_Payment_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( loan__OT_ACH_Payment_Amount__c )) &amp;&amp; (loan__OT_ACH_Payment_Amount__c &lt;= 0) &amp;&amp; ( ISPICKVAL(loan__Transaction_Type__c , &apos;One Time ACH&apos;) || ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;))</errorConditionFormula>
        <errorMessage>ACH payment amount cannot be zero or negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__ACH_Routing_Number_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( loan__OT_ACH_Routing_Number__c )) &amp;&amp; ( LEN(loan__OT_ACH_Routing_Number__c )!=9 &amp;&amp; ( ISPICKVAL(loan__Transaction_Type__c , &apos;One Time ACH&apos;) || ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;)))</errorConditionFormula>
        <errorMessage>Routing number should be 9 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__ACH_Start_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;) &amp;&amp; 
 loan__ACH_Start_Date__c !=  loan__OT_ACH_Debit_Date__c &amp;&amp;  ISNEW()</errorConditionFormula>
        <errorMessage>ACH start date should be same as Debit date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Payment_Tolerance_Dates_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(  loan__Payment_Tolerance_Start_Date__c )) &amp;&amp; NOT(ISBLANK(  loan__Payment_Tolerance_End_Date__c )) &amp;&amp; (loan__Payment_Tolerance_Start_Date__c &gt; loan__Payment_Tolerance_End_Date__c) &amp;&amp; ISPICKVAL(loan__Transaction_Type__c , &apos;Payment Tolerance Change&apos;)</errorConditionFormula>
        <errorMessage>Payment tolerance end date should be greater than start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Prin_Adj_Already_Rev_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( loan__Transaction_Type__c , &apos;PrincipalAdjustment-Add Reversal&apos;),
 loan__Reversed__c 
)</errorConditionFormula>
        <errorMessage>Transaction is already reversed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Recurring_ACH_Dates_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( loan__ACH_End_Date__c )) &amp;&amp; NOT(ISBLANK( loan__ACH_Start_Date__c )) &amp;&amp; (loan__ACH_Start_Date__c &gt; loan__ACH_End_Date__c) &amp;&amp; ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;)</errorConditionFormula>
        <errorMessage>ACH end date should be greater than start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Refund_Amount_Check</fullName>
        <active>false</active>
        <description>This validation is deprecated and should not be used.</description>
        <errorConditionFormula>AND(
ISPICKVAL(  loan__Transaction_Type__c , &apos;Refund&apos;),
( loan__Txn_Amt__c &gt;  loan__Loan_Account__r.loan__Excess__c ) 
)</errorConditionFormula>
        <errorMessage>You cannot refund more than &apos;Excess&apos; amount on Loan account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Txn_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(  loan__Transaction_Type__c , &apos;Refund&apos;),
( loan__Txn_Amt__c &lt;= 0 ) 
)</errorConditionFormula>
        <errorMessage>Refund amount should be greater than zero..</errorMessage>
    </validationRules>
</CustomObject>